[metadata]
name = rapthor
version = attr: rapthor._version.__version__
url = https://git.astron.nl/RD/rapthor
author = David Rafferty
author_email = drafferty@hs.uni-hamburg.de
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 1 - Alpha
    Natural Language :: English
    Intended Audience :: Science/Research
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Astronomy
license = GPL-2
license_files = LICENSE
description = Rapthor: LOFAR DDE Pipeline
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any

[options]
setup_requires =
    setuptools >= 40.8.0
    wheel
install_requires =
    astropy
    bdsf
    jinja2
    losoto
    lsmtool
    numpy
    python-casacore
    python-dateutil
    reproject
    Rtree
    scipy
    shapely
    # toil[cwl]!=5.6 because of https://github.com/DataBiosphere/toil/issues/4101
    # toil[cwl]!=5.8 because of https://gitter.im/bd2k-genomics-toil/Lobby?at=63d7f912ec2bfc62867d36e6
    toil[cwl]!=5.6,!=5.8
scripts =
    bin/rapthor
    bin/plotrapthor
    bin/concat_linc_files
    rapthor/scripts/adjust_h5parm_sources.py
    rapthor/scripts/blank_image.py
    rapthor/scripts/combine_h5parms.py
    rapthor/scripts/concat_ms.py
    rapthor/scripts/filter_skymodel.py
    rapthor/scripts/make_aterm_images.py
    rapthor/scripts/make_region_file.py
    rapthor/scripts/make_mosaic.py
    rapthor/scripts/make_mosaic_template.py
    rapthor/scripts/process_slow_gains.py
    rapthor/scripts/regrid_image.py
    rapthor/scripts/subtract_sector_models.py
    rapthor/scripts/split_h5parms.py
    rapthor/scripts/mpi_runner.sh
packages =
    rapthor
    rapthor.operations
    rapthor.lib

[options.package_data]
rapthor =
    pipeline/*/*.cwl
    scripts/*
    skymodels/*
